<resources>
    <string name="app_name">PioneerHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="channels">Channels</string>
    <string name="student_feed">Student Feed</string>
    <string name="buy_and_sell">Buy and Sell</string>


    <string name="select_a_channel">Select a Channel</string>
    <string name="post">Post</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="lost_and_found">Lost &amp; Found</string>
    <string name="housing">Housing</string>
    <string name="ride_sharing">Ride Sharing</string>
    <string name="news">News</string>
    <string name="example_post_desc">This is a cool app. Can\'t wait to tell my friends about this. It\'s free and I can socialize with others here at CSEUB. Tell others to join now!!</string>
    <string name="like">Like</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="dialog_message">The email or password you entered is incorrect.</string>
    <string name="dialog_title">Login Failed</string>
    <string name="dialog_try_again">Try again</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="register">Register</string>
    <string name="registration_dialog_title_failed">Registration Failed!</string>
    <string name="register_dialog_message_failed">Missing fields or the passwords do not match</string>
    <string name="vertical_ellipsis">&#8942;</string>

    <string name="edit_info_button">Edit Info</string>
    <string name="cover_image">Cover Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="setting">Setting</string>

    <string name="content_authority">com.codepath.fileprovider</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="google_maps_api_key">AIzaSyDK94lb5VSj4P5lSqqBe9Nnl281U1Ye3pk</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Normal Map</string>
    <string name="terrain_map">Normal Map</string>
    <string name="report">Report</string>

    <string-array name="report_guidelines">
        <item>Post content contains derogatory remarks</item>
        <item>Post content contains harmful remarks against someone</item>
    </string-array>

</resources>