<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/login_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/tvRegisterTitle"
            android:text="Register"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:textSize="50dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etFirstName"
            android:textColor="@color/white"
            android:fontFamily="serif"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/ic_baseline_person_red_24"
            android:drawablePadding="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/first_name"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:maxLength="30"
            android:layout_below="@+id/tvRegisterTitle"/>

        <EditText
            android:id="@+id/etLastName"
            android:drawableLeft="@drawable/ic_baseline_person_red_24"
            android:drawablePadding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:fontFamily="serif"
            android:layout_marginRight="35dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/last_name"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:maxLength="30"
            android:layout_below="@id/etFirstName"/>

        <EditText
            android:id="@+id/etEmail"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:fontFamily="serif"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:maxLength="30"
            android:layout_below="@id/etLastName"/>

        <EditText
            android:id="@+id/etPassword"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_below="@id/etEmail"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:maxLength="30"
            android:fontFamily="serif"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etReTypePassword"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginRight="35dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="serif"
            android:hint="@string/re_type_password"
            android:layout_below="@id/etPassword"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:maxLength="30"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnRegister"
            android:drawablePadding="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:fontFamily="serif"
            android:text="@string/register"
            android:layout_above="@id/tvSignIn"/>

        <TextView
            android:id="@+id/tvSignIn"
            android:text="@string/already_have_an_account_sign_in"
            android:textSize="18dp"
            android:fontFamily="serif"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>