<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

   >

    <RelativeLayout
        android:id="@+id/rlTopPartPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_marginLeft="10dp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_baseline_person_24"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:text="Sushma Nayak"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/tvDate"

            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:text="Today @ 6:27 pm"
            />

        <ImageView
            android:id="@+id/ivChannelIcon"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_school_24"
            android:layout_alignParentEnd="true"
            app:tint="@color/black"/>

        <TextView
            android:id="@+id/ivChannelName"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivChannelIcon"
            android:layout_alignParentEnd="true"
            android:text="@string/student_feed"/>

        <TextView
            android:id="@+id/postDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/ivProfileImage"
            android:text="@string/example_post_desc"/>

        <ImageView
            android:id="@+id/ivPostImage"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_below="@+id/postDescription"
            />

        <RelativeLayout
            android:id="@+id/rlPostLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/ivPostImage">

            <ImageView
                android:id="@+id/ivPlaceHolderLikeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_thumb_up_off_alt_24"
                />

            <TextView
                android:id="@+id/tvlikesNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ivPlaceHolderLikeIcon"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:text="8 likes"
                />

            <TextView
                android:id="@+id/tvCommentNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:layout_marginRight="15dp"
                android:text="3 comments"
                />

        </RelativeLayout>
    </RelativeLayout>



    <RelativeLayout
        android:background="@drawable/top_bottom_border"
        android:id="@+id/rvBottomPartPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlTopPartPost"
        >

        <RelativeLayout
            android:id="@+id/rlLikePost"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/ivLikeIcon"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_thumb_up_off_alt_40"/>

            <TextView
                android:id="@+id/tvLikeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivLikeIcon"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:text="@string/like"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlcommentPost"
            android:layout_toRightOf="@+id/rlLikePost"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivCommentIcon"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_chat_bubble_outline_24"/>

            <TextView
                android:id="@+id/tvCommentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivCommentIcon"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:text="Comment"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/ivReportAbuse"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/vertical_ellipsis"
            android:src="@drawable/ic_baseline_more_vert_24" />



    </RelativeLayout>



</RelativeLayout>